--- a/ZCB Pricing .Rmd
+++ b/ZCB Pricing .Rmd
@@ -22,6 +22,8 @@ bond_price <- function(alpha,beta,sigma,t,T,r){
   exp(-A*r +B)
 }
 
+bond_price(0.01,0.2,0.3,0,10,0.01)
+
 ```
 
 ```{r 2}
@@ -54,135 +56,163 @@ monte_carlo <- function(alpha, beta, sigma, t, T, r, n, s){
 ```
 
 ```{r 3}
-# Variance reduction techniques under the Monte Carlo
-#################################################################################
+# My Version of the Monte Carlo
+
+Crude_Monte_Carlo=function(alpha,beta,sigma,T,r0,n,s){
+  
+  # alpha, beta, sigma <- Fixed Parameters
+  # T <- maturity time
+  # r0 <- Initial rate at time 0
+  # n <- Number of Simulations
+  # s <- NUmber of Subintervals 
+  
+  #Simulate interest rates
+  dt <- T/s # Length of sub-intervals
+  sim_path= matrix(0,s+1,n) # Matrix that stores rate pathways
+  sim_path[1,]= r0
+  
+  for (i in 1:n){
+    for (j in 2:(s+1)){
+      dr=alpha*(beta-sim_path[j-1,i])*dt+sigma*sqrt(dt)*rnorm(1)# Euler Discretization
+      sim_path[j,i]=sim_path[j-1,i]+dr
+    }
+  }
+  
+  # Monte Carlo Simulations
+  Sum=colSums(sim_path[2:(s+1),]*dt)
+  int=exp(-Sum)
+  mean=mean(int)
+  sd=sd(int)/sqrt(n)
+  result=c(mean,sd)
+  result
+}
+```
+
+
+
+```{r}
+# Variance Reduction methods
+################################################################################
 # Antithetic Variates
-#################################################################################
-monte_carlo_A <- function(alpha, beta, sigma, t, T, r, n, s){
-  # s = number of sub-intervals
-  # n = number of simulation trials  
-  
-  dt <- T/s
-  sim_path <- matrix(NA,nrow = n, ncol = 2) # matrix to store simulated path integrals
-  sim_r <- NULL # vector to store rates on the path
-  
-  
-  for (d in 1:n){
-    sim_r[1] <- r
-    for (j in 2:s){
-      mu <- alpha/beta + exp(-beta*dt)*(sim_r[j-1] -alpha/beta)
-      sd <- sqrt((sigma^2/(2*beta))*(1 -exp(-2*beta*(dt))))
-      sim_r[j] <- rnorm(1,mu,sd)
-    }
-    sim_a=-sim_r# Conjugate interest rates
-    int <- dt*(sum(sim_r)) # integral of path
-    int_a <- dt*(sum(sim_a)) #integral of conjugate path
-    sim_path[d,1] <- exp(-int) # bond price of path
-    sim_path[d,2]= exp(-int_a) #bond price of conjugate path
-    sim_path_ave= (sim_path[d,1]+sim_path[d,2])/2 #Average of both paths are taken to maintain consistent mean
-    
-  }
-  mean(sim_path_ave) # empirical expectation of bond price using the average path
-}
+################################################################################
 
-
-#################################################################################
-#Moment matching methods
-#################################################################################
-monte_carlo_MM <- function(alpha, beta, sigma, t, T, r, n, s){
-  # s = number of sub-intervals
-  # n = number of simulation trials  
-  
-  dt <- T/s
-  sim_path <- matrix(NA,nrow = n, ncol = 1) # matrix to store simulated path integrals
-  sim_r <- NULL # vector to store rates on the path
-  
-  
-  for (d in 1:n){
-    sim_r[1] <- r
-    for (j in 2:s){
-      mu <- alpha/beta + exp(-beta*dt)*(sim_r[j-1] -alpha/beta)
-      sd <- sqrt((sigma^2/(2*beta))*(1 -exp(-2*beta*(dt))))
-      sim_r[j] <- rnorm(1,mu,sd)
-    }
-    sim_mm=sim_r-mean(sim_r)# Moment matching transformation
-    int <- dt*(sum(sim_mm)) # integral of path
-    sim_path[d,1] <- exp(-int) # bond price of path
-    
-  }
-  mean(sim_path) # empirical expectation of bond price using all paths
-}
-#################################################################################
-#Control Variates
-#################################################################################
-# We have decided to make use of the CIR model as our control variate process.
-# Below is the closed form solution under the CIR model
-bond_price_CIR <- function(alpha,beta,sigma,t,T,r){
-  h <- sqrt(alpha^(2)+2*sigma^(2))
-  A <-(2*h*exp((alpha+h)(T-t)/2)/(2*h+(alpha+h)(exp((T-t)(h))-1)))^((2*alpha*beta)/sigma^(2))
-  B <-2*(exp((T-t)(h))-1)/(2*h+(alpha+h)(exp((T-t)(h))-1))
-  A*exp(-B*r)
-}
-
-# We now simulate the difference between CIR and Vasicek under the exponential find the expectation
-
-#Simulation under the Vasicek model
-monte_carlo(alpha, beta, sigma, t, T, r, n, s)
-
-# Simulation under the CIR model
-
-CIR_MC= function(alpha, beta, sigma, t, T, r, n, s){
-  
-  dt <- T/s
-  sim_path_c <- matrix(NA,nrow = n, ncol = 1) # matrix to store simulated path integrals
-  sim_c <- NULL # vector to store rates on the path
-  
-  for(i in 1:n){
-    sim_c[1]=r
-    for(j in 2:s+1){
-      dr <- alpha*(beta-sim_c[j-1])*dt + sigma*sqrt(dt)*sqrt(sim_c[j-1])*rnorm(1,0,1)
-      sim_c[j] <- sim_c[j-1] + dr
-    }
-    int_c <- dt*(sum(sim_c)) # integral of path
-    sim_path_c[i,1] <- exp(-int) # bond price of path
-    
-  }
-  
-  mean(sim_path_c)
-}
-# Therefore the control variates estimate:
-
-Control_variate_estimate=function(alpha, beta, sigma, t, T, r, n, s){
-  monte_carlo(alpha, beta, sigma, t, T, r, n, s)- CIR_MC(alpha, beta, sigma, t, T, r, n, s)+bond_price_CIR(alpha,beta,sigma,t,T,r)
-  
-}
-
-#################################################################################
-
-
-
-
-
-
-
- 
-    
-  
-  
+Antithetic_variates= function(alpha,beta,sigma,T,r0,n,s){
+  dt <- T/s # Length of sub-intervals
+  sim_path= matrix(0,s+1,n) # Matrix that stores rate pathways
+  sim_path_inv= matrix(0,nrow = s+1, ncol = n)# matrix to generate interest paths using inverse RV
+  sim_path[1,]= r0
+  sim_path_inv[1,]=r0
  
   
+  for (i in 1:n){
+    for (j in 2:(s+1)){
+      dr=alpha*(beta-sim_path[j-1,i])*dt+sigma*sqrt(dt)*z[j-1] # Euler Discretization
+      dr_i= alpha*(beta-sim_path_inv[j-1,i])*dt + sigma*sqrt(dt)*z.[j-1]
+      sim_path[j,i]=sim_path[j-1,i]+dr
+      sim_path_inv[j,i]=sim_path_inv[j-1,i]+dr_i
+      
+    }
+  }
   
+  # Monte Carlo Simulations
+  Sum=colSums(sim_path[2:(s+1),]*dt)
+  Sum.=colSums(sim_path_inv[2:(s+1),]*dt)
+  int.=exp(-Sum.)
+  int=exp(-Sum)
+  Average=(int+int.)/2
+  mean=mean(Average)
+  sd=sd(Average)/sqrt(n)
+  result=c(mean,sd)
+  result
   
-  
-  
-  
-  
-
-
-
-
+}
 
 ```
+
+```{r}
+#Moment Matching
+#################################################################################
+
+Moment_Matching=function(alpha,beta,sigma,T,r0,n,s){
+  
+  # alpha, beta, sigma <- Fixed Parameters
+  # T <- maturity time
+  # r0 <- Initial rate at time 0
+  # n <- Number of Simulations
+  # s <- NUmber of Subintervals 
+  
+  #Simulate interest rates
+  dt <- T/s # Length of sub-intervals
+  sim_path= matrix(0,s+1,n) # Matrix that stores rate pathways
+  sim_path[1,]= r0
+  z=rnorm(s)
+  z_m= z-mean(z) 
+  
+  for (i in 1:n){
+    for (j in 2:(s+1)){
+      dr=alpha*(beta-sim_path[j-1,i])*dt+sigma*sqrt(dt)*z_m[j-1]# Euler Discretization
+      sim_path[j,i]=sim_path[j-1,i]+dr
+    }
+  }
+  
+  # Monte Carlo Simulations
+  Sum=colSums(sim_path[2:(s+1),]*dt)
+  int=exp(-Sum)
+  mean=mean(int)
+  sd=sd(int)/sqrt(n)
+  result=c(mean,sd)
+  result
+}
+```
+
+```{r}
+# Control Variates
+#################################################################################
+
+# We have decided to make use of the CIR model as our control variate process.
+# Below is the closed form solution under the CIR model
+bond_price_CIR <- function(alpha,beta,sigma,t,T,r0){
+  h <- sqrt(alpha^(2)+2*sigma^(2))
+  A <-(2*h*exp((alpha+h)*(T-t)/2)/(2*h+(alpha+h)*(exp((T-t)*(h))-1)))^((2*alpha*beta)/sigma^(2))
+  B <-2*(exp((T-t)*(h))-1)/(2*h+(alpha+h)*(exp((T-t)*(h))-1))
+  A*exp(-B*r0)
+}
+
+
+# Monte Carlo Simulations of Bond Price under the CIR model
+
+CIR_MC= function(alpha,beta,sigma,T,r0,n,s){
+  
+  dt <- T/s # Length of sub-intervals
+  sim_path= matrix(0,s+1,n) # Matrix that stores rate pathways
+  sim_path[1,]= r0
+  
+  for (i in 1:n){
+    for (j in 2:(s+1)){
+      dr=alpha*(beta-sim_path[j-1,i])*dt+(sigma*sqrt(dt)*rnorm(1)*sqrt(sim_path[j-1,i]))# Euler Discretization
+      sim_path[j,i]=sim_path[j-1,i]+dr
+    
+    }
+  }
+  
+  # Monte Carlo Simulations
+  Sum=colSums(sim_path[2:(s+1),]*dt)
+  int=exp(-Sum)
+  mean=mean(int)
+  sd=sd(int)/sqrt(n)
+  result=c(mean,sd)
+  result
+  
+}
+
+# Therefore the control variates estimate:
+
+Control_Variates_estimate= function(alpha, beta, sigma,t,T,r0,n,s){
+  Crude_Monte_Carlo(alpha,beta,sigma,T,r0,n,s)[1]- CIR_MC(alpha,beta,sigma,T,r0,n,s)[1]+bond_price_CIR(alpha,beta,sigma,t,T,r0)
+}
+```
+
+
 
 ```{r 4}
 # Explicit Method
@@ -219,7 +249,7 @@ for (n in seq(s,0,-1)){
 }
 V
 }
-
+explicit(0.2,0.3, 0.1, 20, 0.03, 20, 10)
 
 ```
 
